<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/popup_element"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:background="#000077"
android:orientation="vertical"
android:padding="15sp" >

<TextView
android:id="@+id/txtView1"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginTop="5sp"
android:layout_marginBottom="5sp"
android:text="@string/lcm" 
android:typeface="serif"
android:textColor="#FF0000"
android:textSize="15sp"
android:textStyle="bold"
android:layout_gravity="center_horizontal"/>

<TextView
android:id="@+id/txtView2"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginTop="5sp"
android:layout_marginBottom="5sp"
android:text="@string/time"
android:typeface="serif"
android:textColor="#FF0000"
android:textSize="15sp"
android:textStyle="bold"
android:layout_gravity="center_horizontal"/>

<TextView
android:id="@+id/txtView3"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginTop="5sp"
android:layout_marginBottom="5sp"
android:text="@string/scm" 
android:typeface="serif"
android:textColor="#FF0000"
android:textSize="15sp"
android:textStyle="bold"
android:layout_gravity="center_horizontal"/>

<TextView
android:id="@+id/txtView4"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginTop="5sp"
android:layout_marginBottom="5sp"
android:text="@string/time" 
android:typeface="serif"
android:textColor="#FF0000"
android:textSize="15sp"
android:textStyle="bold"
android:layout_gravity="center_horizontal"/>

<TextView
android:id="@+id/txtView5"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginTop="5sp"
android:layout_marginBottom="5sp"
android:text="@string/scy" 
android:typeface="serif"
android:textColor="#FF0000"
android:textSize="15sp"
android:textStyle="bold"
android:layout_gravity="center_horizontal"/>

<TextView
android:id="@+id/txtView6"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginTop="5sp"
android:layout_marginBottom="10sp"
android:text="@string/time" 
android:typeface="serif"
android:textColor="#FF0000"
android:textSize="15sp"
android:textStyle="bold"
android:layout_gravity="center_horizontal"/>

<Button
android:id="@+id/btn_close_popup"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_gravity="center"
android:typeface="serif"
android:text="@string/close" />

</LinearLayout>