<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@drawable/water"
    android:id="@+id/lay">
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course"
  		android:layout_gravity="center_horizontal"
  		android:typeface="serif"
  		android:textColor="#FF0000"
  		android:textSize="20sp"
  		android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceSmall" />   
    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:typeface="serif"
        android:entries="@array/courses" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stroke"
        android:layout_gravity="center_horizontal"
        android:typeface="serif"
  		android:textColor="#FF0000"
  		android:textSize="20sp"
  		android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:typeface="serif"
        android:entries="@array/strokes" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distance"
        android:layout_gravity="center_horizontal"
        android:typeface="serif"
  		android:textColor="#FF0000"
  		android:textSize="20sp"
  		android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:typeface="serif"
        android:entries="@array/distance" />
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:layout_gravity="center_horizontal"
        android:typeface="serif"
  		android:textColor="#FF0000"
  		android:textSize="20sp"
  		android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    <LinearLayout 
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal" 
    	android:layout_gravity="center_horizontal">
        <EditText
            android:id="@+id/editText1"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" 
            android:layout_gravity="center_horizontal"
            android:paddingLeft="10.0px">
            <requestFocus />
        </EditText>
  	  	<TextView
    	    android:id="@+id/textView4"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/colon"
        	android:paddingLeft="5.0px"
        	android:paddingRight="5.0px"
        	android:typeface="serif"
  			android:textColor="#FF0000"
  			android:textSize="20sp"
  			android:textStyle="bold"
        	android:textAppearance="?android:attr/textAppearanceLarge" 
        	android:layout_gravity="center_horizontal"/>
  	  	<EditText
            android:id="@+id/editText2"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" 
            android:layout_gravity="center_horizontal">
            <requestFocus />
        </EditText>
        <TextView
    	    android:id="@+id/textView5"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/period"
        	android:paddingLeft="5.0px"
        	android:paddingRight="5.0px"
        	android:typeface="serif"
  			android:textColor="#FF0000"
  			android:textSize="20sp"
  			android:textStyle="bold"
        	android:textAppearance="?android:attr/textAppearanceLarge" />
        <EditText
            android:id="@+id/editText3"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:layout_gravity="center_horizontal" >
            <requestFocus />
        </EditText>
        <Button
            android:id="@+id/button1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/go"
            android:typeface="serif"
            android:paddingLeft="10.0px" />
  	  </LinearLayout>

    <com.google.ads.AdView
        android:id="@+id/ad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adUnitId="a151ed9827eae17"
        ads:adSize="BANNER"
        ads:testDevices="TEST_EMULATOR, 45820497F5F92C080F388F2D477BDE3C"
        ads:loadAdOnCreate="true" />

</LinearLayout>